Add check_yum to ITL
fixes #9671

--- a/itl/plugins-contrib.d/operating-system.conf
+++ b/itl/plugins-contrib.d/operating-system.conf
@@ -49,3 +49,54 @@ object CheckCommand "mem" {
 	vars.mem_free = false
 	vars.mem_cache = false
 }
+
+object CheckCommand "yum" {
+	import "plugin-check-command"
+
+	command = [ PluginContribDir + "/check_yum" ]
+
+	arguments = {
+		"--all-updates" = {
+			set_if = "$yum_all_updates$"
+			description = "Do not distinguish between security and non-security updates. This may be used if the YUM security plugin is absent."
+		}
+		"--warn-on-any-update" = {
+			set_if = "$yum_warn_on_any_update$"
+			description = "Warns if there are any (non-security) package updates available."
+		}
+		"--cache-only" = {
+			set_if = "$yum_cache_only$"
+			description = "Run entirely from cache and do not update the cache."
+		}
+		"--no-warn-on-lock" = {
+			set_if = "$yum_no_warn_on_lock$"
+			description = "Return OK instead of WARNING when YUM is locked."
+		}
+		"--no-warn-on-updates" = {
+			set_if = "$yum_no_warn_on_updates$"
+			description = "Return OK instead of WARNING even when updates are available."
+		}
+		"--enablerepo" = {
+			value = "$yum_enablerepo$"
+			description = "Explicitly enables a reposity when calling YUM. Can take a comma separated list of repositories."
+		}
+		"--disablerepo" = {
+			value = "$yum_disablerepo$"
+			description = "Explicitly disables a reposity when calling YUM. Can take a comma separated list of repositories."
+		}
+		"--installroot" = {
+			value = "$yum_installroot$"
+			description = "Specifies another installation root directory"
+		}
+		"--timeout" = {
+			value = "$yum_timeout$"
+			description = "Sets a timeout in seconds after which the plugin will exit (defaults to 55 seconds)."
+		}
+	}
+
+	vars.yum_all_updates = false
+	vars.yum_warn_on_any_update = false
+	vars.yum_cache_only = false
+	vars.yum_no_warn_on_lock = false
+	vars.yum_no_warn_on_updates = false
+}
