Add check_redis to ITL
fixes #9675

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -419,3 +419,99 @@ object CheckCommand "elasticsearch" {
 
 	vars.elasticsearch_yellowcritical = false
 }
+
+object CheckCommand "redis" {
+	import "plugin-check-command"
+
+	command = [ PluginContribDir + "/check_redis.pl" ]
+
+	arguments = {
+		"--hostname" = {
+			value = "$redis_hostname$"
+			description = "Hostname or IP Address to check."
+		}
+		"--port" = {
+			value = "$redis_port$"
+			description = "Port number (default: 6379)."
+		}
+		"--database" = {
+			value = "$redis_database$"
+			description = "Optional database name (usually a number), needed for redis_query."
+		}
+		"--password" = {
+			value = "$redis_password$"
+			description = "Password for Redis authentication. Safer alternative is to put them in a file and use redis_credentials."
+		}
+		"--credentials" = {
+			value = "$redis_credentials$"
+			description = "Credentials file to read for Redis authentication."
+		}
+		"--timeout" = {
+			value = "$redis_timeout$"
+			description = "Allows to set timeout for execution of this plugin."
+		}
+		"--variables" = {
+			value = "$redis_variables$"
+			description = "List of variables from info data to do threshold checks on."
+		}
+		"--warn" = {
+			value = "$redis_warn$"
+			description = "This option can only be used if redis_variables is used and number of values listed here must exactly match number of variables specified."
+		}
+		"--crit" = {
+			value = "$redis_crit$"
+			description = "This option can only be used if redis_variables is used and number of values listed here must exactly match number of variables specified."
+		}
+		"--perfparse" = {
+			set_if = "$redis_perfparse$"
+			description = "This should only be used with variables and causes variable data not only to be printed as part of main status line but also as perfparse compatible output."
+		}
+		"--perfvars" = {
+			value = "$redis_perfvars$"
+			description = "This allows to list variables which values will go only into perfparse output (and not for threshold checking)."
+		}
+		"--prev_perfdata" = {
+			value = "$service.perfdata$"
+			set_if = "$redis_prev_perfdata$"
+			description = "Previous performance data used to calculate rate of change for counter statistics variables and for proper calculation of hitrate."
+		}
+		"--rate_label" = {
+			value = "$redis_rate_label$"
+			description = "Prefix or Suffix label used to create a new variable which has rate of change of another base variable."
+		}
+		"--query" = {
+			value = "$redis_query$"
+			repeat_key = true
+			description = "Option specifies key to query and optional variable name to assign the results to after. See the help output of the plugin for the detailed format."
+		}
+		"--option" = {
+			value = "$redis_option$"
+			repeat_key = true
+			description = "Specifiers are separated by , and must include NAME or PATTERN. See the help output of the plugin for the detailed format."
+		}
+		"--response_time" = {
+			value = "$redis_response_time$"
+			description = "If this is used plugin will measure and output connection response time in seconds. With perfparse this would also be provided on perf variables."
+		}
+		"--hitrate" = {
+			value = "$redis_hitrate$"
+			description = "Calculates Hitrate."
+		}
+		"--memory_utilization" = {
+			value = "$redis_memory_utilization$"
+			description = "This calculates percent of total memory on system used by redis."
+		}
+		"--total_memory" = {
+			value = "$redis_total_memory$"
+			description = "Amount of memory on a system for memory utilization calculations above."
+		}
+		"--replication_delay" = {
+			value = "$redis_replication_delay$"
+			description = "Allows to set threshold on replication delay info."
+		}
+	}
+
+	vars.redis_hostname = "127.0.0.1"
+	vars.redis_perfparse = false
+	vars.redis_prev_perfdata = false
+}
