Implement the include_zones directive
refs #9083

--- a/etc/icinga2/icinga2.conf
+++ b/etc/icinga2/icinga2.conf
@@ -49,3 +49,8 @@ include_recursive "repository.d"
  */
 include_recursive "conf.d"
 
+/**
+ * The zones.d directory contains configuration files for satellite
+ * instances.
+ */
+include_zones "etc", "zones.d"
