Added descriptions to the check_load command. Added "-r" parameter to the check_load command for dividing the load averages by the number of CPUs. New variable "load_percpu" added to use when "-r" is required for check_load command.

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -975,8 +975,18 @@ object CheckCommand "load" {
 	command = [ PluginDir + "/check_load" ]
 
 	arguments = {
-		"-w" = "$load_wload1$,$load_wload5$,$load_wload15$"
-		"-c" = "$load_cload1$,$load_cload5$,$load_cload15$"
+		"-w" = {
+			value = "$load_wload1$,$load_wload5$,$load_wload15$"
+			description = "Exit with WARNING status if load average exceeds WLOADn"
+		}
+		"-c" = {
+			value = "$load_cload1$,$load_cload5$,$load_cload15$"
+			description = "Exit with CRITICAL status if load average exceed CLOADn the load average format is the same used by 'uptime' and 'w'"
+		}
+		"-r" = {
+			set_if = "$load_percpu$"
+			description = "Divide the load averages by the number of CPUs (when possible)"
+		}
 	}
 
 	vars.load_wload1 = 5.0
@@ -986,6 +996,8 @@ object CheckCommand "load" {
 	vars.load_cload1 = 10.0
 	vars.load_cload5 = 6.0
 	vars.load_cload15 = 4.0
+
+	vars.load_percpu = false
 }
 
 object CheckCommand "snmp" {
