Implement support for filters
fixes #9077

--- a/lib/remote/CMakeLists.txt
+++ b/lib/remote/CMakeLists.txt
@@ -24,10 +24,10 @@ set(remote_SOURCES
   apifunction.cpp apilistener.cpp apilistener.thpp apilistener-sync.cpp
   apiuser.cpp apiuser.thpp authority.cpp base64.cpp configfileshandler.cpp
   configmoduleshandler.cpp configmoduleutility.cpp configstageshandler.cpp
-  endpoint.cpp endpoint.thpp
-  httpchunkedencoding.cpp  httpconnection.cpp httpdemohandler.cpp httphandler.cpp httprequest.cpp httpresponse.cpp
+  endpoint.cpp endpoint.thpp filterutility.cpp
+  httpchunkedencoding.cpp  httpconnection.cpp httphandler.cpp httprequest.cpp httpresponse.cpp
   httputility.cpp jsonrpc.cpp jsonrpcconnection.cpp jsonrpcconnection-heartbeat.cpp
-  messageorigin.cpp zone.cpp zone.thpp
+  messageorigin.cpp statusqueryhandler.cpp zone.cpp zone.thpp
   url.cpp
 )
 
