ITL: Add check command check_interfaces
fixes #9527

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -341,3 +341,102 @@ object CheckCommand "iftraffic" {
 	vars.iftraffic_crit = "98%"
 }
 
+object CheckCommand "interfaces" {
+	import "plugin-check-command"
+	import "ipv4-or-ipv6"
+
+	command = [ PluginContribDir + "/check_interfaces" ]
+
+	arguments = {
+		"--hostname" = "$interfaces_address$"
+		"--community" = {
+			value = "$interfaces_community$"
+			description = "The community string (default public)."
+		}
+		"--regex" = {
+			value = "$interfaces_regex$"
+			description = "Interface list regexp."
+		}
+		"--exclude-regex" = {
+			value = "$interfaces_exclude_regex$"
+			description = "Interface list negative regexp."
+		}
+		"--errors" = {
+			value = "$interfaces_errors$"
+			description = "Number of in errors (CRC errors for cisco) to consider a warning (default 50)."
+		}
+		"--out-errors" = {
+			value = "$interface_out_errors$"
+			description = "Number of out errors (collisions for cisco) to consider a warning (default same as in errors)."
+		}
+		"--perfdata" = {
+			value = "$interfaces_perfdata$"
+		}
+		"--prefix" = {
+			value = "$interfaces_prefix$"
+			description = "Prefix interface names with this label."
+		}
+		"--lastcheck" = {
+			value = "$interfaces_lastcheck$"
+			description = "Last checktime (unixtime)."
+		}
+		"--bandwidth" = {
+			value = "$interfaces_bandwidth$"
+			description = "Bandwidth warn level in percent."
+		}
+		"--speed" = {
+			value = "$interfaces_speed$"
+			description = "Override speed detection with this value (bits per sec)."
+		}
+		"--trim" = {
+			value = "$interfaces_trim$"
+			description = "Cut this number of characters from the start of interface descriptions."
+		}
+		"--mode" = {
+			value = "$interfaces_mode$"
+			description = "Special operating mode (default,cisco,nonbulk,bintec)."
+		}
+		"--auth-proto" = {
+			value = "$interfaces_auth_proto$"
+			description = "SNMPv3 Auth Protocol (SHA|MD5)"
+		}
+		"--auth-phrase" = {
+			value = "$interfaces_auth_phrase$"
+			description = "SNMPv3 Auth Phrase"
+		}
+		"--priv-proto" = {
+			value = "$interfaces_priv_proto$"
+			description = "SNMPv3 Privacy Protocol (AES|DES)"
+		}
+		"--priv-phrase" = {
+			value = "$interfaces_priv_phrase$"
+			description = "SNMPv3 Privacy Phrase"
+		}
+		"--user" = {
+			value = "$interfaces_user$"
+			description = "SNMPv3 User"
+		}
+		"--down-is-ok" = {
+			set_if = "$interfaces_down_is_ok$"
+			description = "Disables critical alerts for down interfaces."
+		}
+		"--aliases" = {
+			set_if = "$interfaces_aliases$"
+			description = "Retrieves the interface description."
+		}
+		"--match-aliases" = {
+			value = "$interfaces_match_aliases$"
+			description = "Also match against aliases (Option --aliases automatically enabled)."
+		}
+		"--timeout" = {
+			value = "$interfaces_timeout$"
+			description = "Sets the SNMP timeout (in ms)."
+		}
+		"--sleep" = {
+			value = "$interfaces_sleep$"
+			description = "Sleep between every SNMP query (in ms)."
+		}
+	}
+
+	vars.interfaces_address = "$check_address$"
+}
