ITL: Add check command check_mailq
fixes #9811

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1521,3 +1521,38 @@ object CheckCommand "clamd" {
 	vars.clamd_mismatch = "warn"
 	vars.clamd_timeout = 10
 }
+
+object CheckCommand "mailq" {
+	import "plugin-check-command"
+
+	command = [ PluginDir + "/check_mailq" ]
+
+	arguments = {
+		"-w" = {
+			value = "$mailq_warning$"
+			description = "Min. number of messages in queue to generate warning"
+			required = true
+		}
+		"-c" = {
+			value = "$mailq_critical$"
+			description = "Min. number of messages in queue to generate critical alert ( w < c )"
+			required = true
+		}
+		"-W" = {
+			value = "$mailq_domain_warning$"
+			description = "Min. number of messages for same domain in queue to generate warning"
+		}
+		"-C" = {
+			value = "$mailq_domain_critical$"
+			description = "Min. number of messages for same domain in queue to generate critical alert ( W < C )"
+		}
+		"-t" = {
+			value = "$mailq_timeout$"
+			description = "Plugin timeout in seconds (default = 15)"
+		}
+		"-M" = {
+			value = "$mailq_servertype$"
+			description = "[ sendmail | qmail | postfix | exim | nullmailer ] (default = autodetect)"
+		}
+	}
+}
