snmpv3 CheckCommand section improved
Added tabs as required

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1057,18 +1057,74 @@ object CheckCommand "snmpv3" {
 	command = [ PluginDir + "/check_snmp" ]
 
 	arguments = {
-		"-H" = "$snmpv3_address$"
-		"-P" = 3
-		"--seclevel" = "$snmpv3_seclevel$"
-		"-U" = "$snmpv3_user$"
-		"-a" = "$snmpv3_auth_alg$"
-		"-A" = "$snmpv3_auth_key$"
-		"-x" = "$snmpv3_priv_alg$"
-		"-X" = "$snmpv3_priv_key$"
-		"-o" = "$snmpv3_oid$"
-		"-c" = "$snmpv3_crit$"
-		"-w" = "$snmpv3_warn$"
-		"-l" = "$snmpv3_label$"
+			"-H" = {
+					value = "$snmpv3_address$"
+					description = "Host name, IP Address, or unix socket (must be an absolute path)"
+			}
+			"-n" = {
+					set_if = "$snmpv3_getnext$"
+					description = "Use SNMP GETNEXT instead of SNMP GET"
+			}
+			"-P" = {
+					value = 3
+					description = "SNMP protocol version"
+			}
+			"-L" = {
+					value = "$snmpv3_seclevel$"
+					description = "SNMPv3 securityLevel"
+			}
+			"-a" = {
+					value = "$snmpv3_auth_alg$"
+					description = "SNMPv3 auth proto"
+			}
+			"-U" = {
+					value = "$snmpv3_user$"
+					description = "SNMPv3 username"
+			}
+			"-A" = {
+					value = "$snmpv3_auth_key$"
+					description = "SNMPv3 authentication password"
+			}
+			"-X" = {
+					value = "$snmpv3_priv_key$"
+					description = "SNMPv3 privacy password"
+			}
+			"-o" = {
+					value = "$snmpv3_oid$"
+					description = "Object identifier(s) or SNMP variables whose value you wish to query"
+			}
+			"-x" = {
+					value = "$snmpv3_priv_alg$"
+					description = "SNMPv3 priv proto (default DES)"
+			}
+			"-w" = {
+					value = "$snmpv3_warn$"
+					description = "Warning threshold range(s)"
+			}
+			"-c" = {
+					value = "$snmpv3_crit$"
+					description = "Critical threshold range(s)"
+			}
+			"-s" = {
+					value = "$snmpv3_string$"
+					description = "Return OK state (for that OID) if STRING is an exact match"
+			}
+			"-r" = {
+					value = "$snmpv3_ereg$"
+					description = "Return OK state (for that OID) if extended regular expression REGEX matches"
+			}
+			"-R" = {
+					value = "$snmpv3_eregi$"
+					description = "Return OK state (for that OID) if case-insensitive extended REGEX matches"
+			}
+			"--invert-search" = {
+					set_if = "$snmpv3_invert_search$"
+					description = "Invert search result and return CRITICAL if found"
+			}
+			"-l" = {
+					value = "$snmpv3_label$"
+					description = "Prefix label for output from plugin"
+			}
 	}
 
 	vars.snmpv3_address = "$check_address$"
