GelfWriter: Add additional fields for 'CHECK RESULT' events
fixes #9858

--- a/etc/icinga2/features-available/gelf.conf
+++ b/etc/icinga2/features-available/gelf.conf
@@ -1,7 +1,7 @@
 /**
  * The GelfWriter type writes event log entries
- * to a GELF tcp socket provided by graylog2,
- * logstash or any other receiver.
+ * to a GELF tcp socket provided by Graylog,
+ * Logstash or any other receiver.
  */
 
 library "perfdata"
