Fix check_command interfaces, change option match_aliases to boolean
fixes #9912

Signed-off-by: Gunnar Beutner <gunnar@beutner.name>

--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -425,7 +425,7 @@ object CheckCommand "interfaces" {
 			description = "Retrieves the interface description."
 		}
 		"--match-aliases" = {
-			value = "$interfaces_match_aliases$"
+			set_if = "$interfaces_match_aliases$"
 			description = "Also match against aliases (Option --aliases automatically enabled)."
 		}
 		"--timeout" = {
@@ -439,4 +439,7 @@ object CheckCommand "interfaces" {
 	}
 
 	vars.interfaces_address = "$check_address$"
+	vars.interfaces_down_is_ok = false
+	vars.interfaces_aliases = false
+	vars.interfaces_match_aliases = false
 }
