Set skip_key for the "-a" argument for nscp-local
fixes #9984

Signed-off-by: Gunnar Beutner <gunnar@beutner.name>

--- a/itl/command-nscp-local.conf
+++ b/itl/command-nscp-local.conf
@@ -36,7 +36,10 @@ object CheckCommand "nscp-local" {
 		"-b" = {
 			set_if = "$nscp_boot$"
 		}
-		"-a" = "$nscp_arguments$"
+		"-a" = {
+			value = "$nscp_arguments$"
+			skip_key = true
+		}
 	}
 
 	vars.nscp_log_level = "critical"
