Add check command nspc-local-counter
fixes #9985

Signed-off-by: Gunnar Beutner <gunnar@beutner.name>

--- a/itl/command-nscp-local.conf
+++ b/itl/command-nscp-local.conf
@@ -100,3 +100,9 @@ object CheckCommand "nscp-local-disk" {
 
 	vars.nscp_query = "check_drivesize"
 }
+
+object CheckCommand "nscp-local-counter" {
+	import "nscp-local"
+
+	vars.nscp_query = "check_pdh"
+}
