--- a/lib/remote/remote-type.conf
+++ b/lib/remote/remote-type.conf
@@ -40,6 +40,8 @@
 
 %type Endpoint {
 	%attribute %string "host",
+
+	%require "port",
 	%attribute %string "port",
 
 	%attribute %number "log_duration"
