Add new argument vmware_openvmtools to check commands vmware-esx-dc-runtime-tools and vmware-esxi-soap-vm-runtime-tools
fixes #9996

Signed-off-by: Gunnar Beutner <gunnar@beutner.name>

--- a/itl/plugins-contrib.d/vmware.conf
+++ b/itl/plugins-contrib.d/vmware.conf
@@ -251,6 +251,9 @@ object CheckCommand "vmware-esx-dc-runtime-tools" {
 		"--alertonly" = {
 			set_if = "$vmware_alertonly$"
 		}
+		"--open-vm-tools" = {
+			set_if = "$vmware_openvmtools$"
+		}
 	}
 }
 
@@ -1140,6 +1143,9 @@ object CheckCommand "vmware-esx-soap-vm-runtime-tools" {
 	arguments += {
 		"--select" = "runtime"
 		"--subselect" = "tools"
+		"--open-vm-tools" = {
+			set_if = "$vmware_openvmtools$"
+		}
 	}
 }
 
