Implement the resolve_arguments function
fixes #10006

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1277,7 +1277,20 @@ object CheckCommand "by_ssh" {
 	arguments = {
 		"-H" = "$by_ssh_address$"
 		"-p" = "$by_ssh_port$"
-		"-C" = "$by_ssh_command$"
+		"-C" = {{
+			var command = macro("$by_ssh_command$")
+			var arguments = macro("$by_ssh_arguments$")
+
+			if (typeof(command) == String && !arguments) {
+				return command
+			}
+
+			var escaped_args = []
+			for (arg in resolve_arguments(command, arguments)) {
+				escaped_args.add(escape_shell_arg(arg))
+			}
+			return escaped_args.join(" ")
+		}}
 		"-l" = "$by_ssh_logname$"
 		"-i" = "$by_ssh_identity$"
 		"-q" = {
