Docs: Fix url anchors in API chapter
refs #9105

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,20 +10,21 @@ pages:
 - [6-object-types.md, Object Types]
 - [7-icinga-template-library.md, Icinga Template Library]
 - [8-cli-commands.md, CLI Commands]
-- [9-monitoring-remote-systems.md, Monitoring Remote Systems]
-- [10-icinga2-client.md, Icinga 2 Client]
-- [11-agent-based-checks.md, Additional Agent-based Checks]
-- [12-distributed-monitoring-ha.md, Distributed Monitoring and High Availability]
-- [13-addons-plugins.md, Addons and Plugins]
-- [14-alternative-frontends.md, Alternative Frontends]
-- [15-livestatus.md, Livestatus]
-- [16-troubleshooting.md, Troubleshooting]
-- [17-upgrading-icinga-2.md, Upgrading Icinga 2]
-- [18-migrating-from-icinga-1x.md, Migrating from Icinga 1.x]
-- [19-language-reference.md, Language Reference]
-- [20-library-reference.md, Library Reference]
-- [21-debug.md, Debug]
-- [22-appendix.md, Appendix]
+- [9-icinga2-api.md, Icinga 2 API]
+- [10-monitoring-remote-systems.md, Monitoring Remote Systems]
+- [11-icinga2-client.md, Icinga 2 Client]
+- [12-agent-based-checks.md, Additional Agent-based Checks]
+- [13-distributed-monitoring-ha.md, Distributed Monitoring and High Availability]
+- [14-addons-plugins.md, Addons and Plugins]
+- [15-alternative-frontends.md, Alternative Frontends]
+- [16-livestatus.md, Livestatus]
+- [17-troubleshooting.md, Troubleshooting]
+- [18-upgrading-icinga-2.md, Upgrading Icinga 2]
+- [19-migrating-from-icinga-1x.md, Migrating from Icinga 1.x]
+- [20-language-reference.md, Language Reference]
+- [21-library-reference.md, Library Reference]
+- [22-debug.md, Debug]
+- [23-appendix.md, Appendix]
 theme: readthedocs
 markdown_extensions: [smarty]
 extra_javascript: [scroll.js]
