ITL: Add check command squid
fixes #10109

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/plugins-contrib.d/web.conf
+++ b/itl/plugins-contrib.d/web.conf
@@ -199,3 +199,52 @@ object CheckCommand "jmx4perl" {
 		vars.jmx4perl_numeric = false
 		vars.jmx4perl_unknown_is_critical = false
 }
+
+object CheckCommand "squid" {
+	import "plugin-check-command"
+	import "ipv4-or-ipv6"
+
+	command = [ PluginContribDir + "/check_squid" ]
+
+	arguments = {
+		"--host" = {
+			value = "$squid_hostname$"
+			description = "Name of the proxy to check (default: localhost)"
+		}
+		"--data" = {
+			value = "$squid_data$"
+			description = "Optional data to fetch (default: Connections)    available data : Connections Cache Resources Memory FileDescriptors"
+		}
+		"--port" = {
+			value = "$squid_port$"
+			description = "Optional port number (default: 3128)"
+		}
+		"--user" = {
+			value = "$squid_user$"
+			description = "WWW user"
+		}
+		"--password" = {
+			value = "$squid_password$"
+			description = "WWW password"
+		}
+		"--warning" = {
+			value = "$squid_warning$"
+			description = "Warning threshold. See http://nagiosplug.sourceforge.net/developer-guidelines.html#THRESHOLDFORMAT for the threshold format."
+		}
+		"--critical" = {
+			value = "$squid_critical$"
+			description = "Critical threshold. See http://nagiosplug.sourceforge.net/developer-guidelines.html#THRESHOLDFORMAT for the threshold format."
+		}
+		"--squidclient" = {
+			value = "$squid_client$"
+			description = "Path of squidclient (default: /usr/bin/squidclient)"
+		}
+		"--timeout" = {
+			value = "$squid_timeout$"
+			description = "Seconds before plugin times out (default: 15)"
+		}
+	}
+
+	vars.squid_hostname = "$check_address$"
+	vars.squid_client = "/usr/bin/squidclient"
+}
