--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1351,6 +1351,14 @@ object CheckCommand "nrpe" {
 			repeat_key = false
 			order = 1
 		}
+		"-4" = {
+			set_if = "$nrpe_ipv4$"
+			description = "Use ipv4 only"
+		}
+		"-6" = {
+			set_if = "$nrpe_ipv6$"
+			description = "Use ipv6 only"
+		}
 	}
 
 	vars.nrpe_address = "$check_address$"
