ITL: Add ipv4/ipv6 only to nrpe check command
fixes #10129

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1364,6 +1364,14 @@ object CheckCommand "nrpe" {
 			repeat_key = false
 			order = 1
 		}
+		"-4" = {
+			set_if = "$nrpe_ipv4$"
+			description = "Use ipv4 only"
+		}
+		"-6" = {
+			set_if = "$nrpe_ipv6$"
+			description = "Use ipv6 only"
+		}
 	}
 
 	vars.nrpe_address = "$check_address$"
