add check command for plugin check_pgsql
fixes #10112

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1620,3 +1620,28 @@ object CheckCommand "mailq" {
 		}
 	}
 }
+
+object CheckCommand "pgsql" {
+	import "plugin-check-command"
+	import "ipv4-or-ipv6"
+
+	command = [ PluginDir + "/check_pgsql" ]
+
+	arguments = {
+		"-H" = "$pgsql_hostname$"
+		"-P" = "$pgsql_port$"
+		"-d" = "$pgsql_database$"
+		"-l" = "$pgsql_username$"
+		"-p" = "$pgsql_password$"
+		"-o" = "$pgsql_options$"
+		"-w" = "$pgsql_warning$"
+		"-c" = "$pgsql_critical$"
+		"-t" = "$pgsql_timeout$"
+		"-q" = "$pgsql_query$"
+		"-W" = "$pgsql_query_warning$"
+		"-C" = "$pgsql_query_critical$"
+	}
+
+	vars.pgsql_hostname = "$check_address$"
+}
+
