Add missing options to check command dig
fixes #10139

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1217,7 +1217,15 @@ object CheckCommand "dig" {
 
 	arguments = {
 		"-H" = "$dig_server$"
+		"-p" = "$dig_port$"
 		"-l" = "$dig_lookup$"
+		"-T" = "$dig_record_type$"
+		"-a" = "$dig_expected_address$"
+		"-A" = "$dig_arguments$"
+		"-r" = "$dig_retries$"
+		"-w" = "$dig_warning$"
+		"-c" = "$dig_critical$"
+		"-t" = "$dig_timeout$"
 	}
 
 	vars.dig_server = "$check_address$"
