--- a/itl/plugins-contrib.d/hardware.conf
+++ b/itl/plugins-contrib.d/hardware.conf
@@ -28,7 +28,7 @@ object CheckCommand "hpasm" {
 		}
 		"--ignore-dimms" = {
 			set_if = "$hpasm_ignore-dimms$"
-			description = "Ignore "N/A"-DIMM status on misc. servers (e.g. older DL320)"
+			description = "Ignore \"N/A\"-DIMM status on misc. servers (e.g. older DL320)"
 		}
 		"--ignore-fan-redundancy" = {
 			set_if = "$hpasm_ignore-fan-redundancy$"
@@ -72,7 +72,7 @@ object CheckCommand "hpasm" {
 		}
 		"--eval-nics" = {
 			set_if = "$hpasm_eval-nics$"
-			description = "Check network interfaces (and groups). Try it and report me whyt you think about it. I need to build up some know how on this subject. If get an error and you think, it is not justified for your configuration, please tell me about it. (alwasy send the output of "snmpwalk -On .... 1.3.6.1.4.1.232" and a description how you setup your nics and why it is correct opposed to the plugins error message"
+			description = "Check network interfaces (and groups). Try it and report me whyt you think about it. I need to build up some know how on this subject. If get an error and you think, it is not justified for your configuration, please tell me about it. (alwasy send the output of \"snmpwalk -On .... 1.3.6.1.4.1.232\" and a description how you setup your nics and why it is correct opposed to the plugins error message"
 		}
 	}
 
