Deprecate IcingaStatusWriter feature
fixes #8741

--- a/etc/icinga2/features-available/icingastatus.conf
+++ b/etc/icinga2/features-available/icingastatus.conf
@@ -4,5 +4,7 @@
  * all registered features into a defined JSON file.
  */
 
+/* NOTE: This feature was deprecated in 2.4 and will be removed in future releases. */
+
 object IcingaStatusWriter "icinga-status" { }
 
