Add repeat_key=true to check_disk.exe -p
fixes #10158

--- a/itl/command-plugins-windows.conf
+++ b/itl/command-plugins-windows.conf
@@ -34,6 +34,7 @@ object CheckCommand "disk-windows" {
 		"-p" = {
 			value = "$disk_win_path$"
 			description = "Optional paths to check"
+			repeat_key = true
 		}
 		"-u" = {
 			value = "$disk_win_unit$"
